<resources>
    <string name="app_name">StempleRun</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">사진마당</string>
    <string name="menu_story">스토리길잡이</string>
    <string name="menu_bingo">빙고길잡이</string>
    <string name="menu_hotspot">핫스팟</string>
    <string name="menu_review">리뷰게시판</string>
    <string name="menu_idea">아이디어게시판</string>
    <string name="menu_login">로그인</string>
    <string name="menu_logout">로그아웃</string>
</resources>